--- a/package.json
+++ b/package.json
@@ -10,29 +10,32 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "@prisma/client": "^5.2.0",
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@prisma/client": "^5.5.2",
     "@tiptap/core": "^2.1.7",
     "@tiptap/extension-character-count": "^2.1.7",
     "@tiptap/extension-placeholder": "^2.1.7",
     "@tiptap/pm": "^2.1.7",
     "@tiptap/react": "^2.1.7",
     "@tiptap/starter-kit": "^2.1.7",
-    "@types/node": "20.5.3",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "dotenv": "^16.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "postcss": "8.4.28",
+    "next": "^13.5.6",
+    "next-auth": "^4.24.4",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "tailwindcss": "3.3.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
-    "prisma": "^5.2.0"
+    "@types/node": "^20.8.10",
+    "prisma": "^5.2.0",
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "@tiptap/core": "^2.1.7"
