--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "langchain": "^0.0.197-rc.1",
     "next": "^13.5.6",
     "next-auth": "^4.24.4",
     "postcss": "^8.4.31",
