--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ouchquiz",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -40,5 +40,8 @@
   },
   "peerDependencies": {
     "@tiptap/core": "^2.1.7"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
